# rnn_101

./: .gitignore  README.md  create_dataset.py  pyproject.toml  tensor_shapes.txt
data/: seq_len_4.csv  seq_len_5_only.csv  test_seq_data.csv  train_seq_data.csv
rnn/: __init__.py  config.yaml  create_dataset.py  data.py  misc.py  model.py  test.py  train.py
