[project]
name = "rnn-101"
version = "0.1.0"
description = "An introduction to Recurrent Neural Networks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "einops>=0.8.0",
    "flake8>=7.1.1",
    "hydra-core>=1.3.2",
    "ipython>=8.18.1",
    "isort>=5.13.2",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "tensorboard>=2.18.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
]
